--- a/dashboard/style.css
+++ b/dashboard/style.css
@@ -45,10 +45,12 @@ body {
     border: none;
     border-radius: 0;
     border-bottom: 2px solid #999;
+    color: #fff;
     transition: all .4s;
 }
 
 .search-input:focus {
+    color: #fff;
     background: transparent;
     box-shadow: none;
     border-bottom: 2px solid #dc3545;
@@ -64,6 +66,10 @@ body {
     background-color: #eee;
 }
 
+.search-button:hover .fa-search {
+    transform: scale(1.3);
+}
+
 .icon-parent {
     position: relative;
 }
@@ -71,12 +77,28 @@ body {
 .icon-bullet::after {
     content: '';
     position: absolute;
-    top: 7px;
-    left: 15px;
-    height: 12px;
-    width: 12px;
+    top: 5px;
+    left: 17px;
+    height: 10px;
+    width: 10px;
     background-color: #f44336;
     border-radius: 50%;
+}
+
+.navbar-icon {
+    transition: all .4s;
+}
+
+.navbar-icon:hover {
+    color: #fff !important;
+}
+
+.fa-sign-out-alt {
+    transition: all .4s;
+}
+
+.fa-sign-out-alt:hover {
+    color: #f66436 !important;
 }
 
 .no-outline {
