--- a/dashboard/style.css
+++ b/dashboard/style.css
@@ -139,6 +139,12 @@ body {
 }
 /* end of cards */
 
+/* task list */
+.task-border {
+    border-left: 3px solid #f66436;
+}
+/* end of task list */
+
 /* overwrite Bootstrap */
 .btn-sm {
     padding: .05rem .5rem;
