--- a/dashboard/style.css
+++ b/dashboard/style.css
@@ -101,11 +101,6 @@ body {
     color: #f66436 !important;
 }
 
-.no-outline {
-    outline: none !important;
-    box-shadow: none !important;
-}
-
 @media (max-width: 768px) {
     .sidebar {
         position: static;
@@ -127,6 +122,7 @@ body {
 }
 /* end of navbar */
 
+
 /* cards */
 .card-common {
     box-shadow: 1px 2px 5px #999;
@@ -139,11 +135,25 @@ body {
 }
 /* end of cards */
 
+
 /* task list */
 .task-border {
     border-left: 3px solid #f66436;
 }
 /* end of task list */
+
+
+/* helper classes */
+.no-outline {
+    outline: none !important;
+    box-shadow: none !important;
+}
+
+.show-pointer {
+    cursor: pointer;
+}
+/* end of helper classes */
+
 
 /* overwrite Bootstrap */
 .btn-sm {
