--- a/photoX/style.css
+++ b/photoX/style.css
@@ -93,9 +93,53 @@ header {
 /* end of header */
 
 
-/*
-overwrite Bootstrap4 CSS
-*/
+/* mission */
+.mission {
+  background: #151f20;
+}
+
+.underline {
+  width: 150px;
+  border: 3px solid #eee;
+  margin: auto;
+}
+
+.fromLeft {
+  animation-name: fromLeft;
+  animation-duration: 2s;
+}
+
+.fromRight {
+  animation-name: fromRight;
+  animation-duration: 2s;
+}
+
+@keyframes fromLeft {
+  0% {
+    transform: translateX(-120px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes fromRight {
+  0% {
+    transform: translateX(30px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+/* end of mission */
+
+
+/* overwrite Bootstrap4 CSS */
 .navbar-toggler:focus, .navbar-toggler:hover {
   outline: none;
 }
+/* end of overwrite Bootstrap4 CSS */
