fix minor style issues

--- a/photoX/style.css
+++ b/photoX/style.css
@@ -184,6 +184,9 @@ header {
 .customers {
   background: #151f20;
 }
+.carousel-indicators li {
+  cursor: pointer;
+}
 /* end of customers */
 
 /* pricing */
