--- a/photoX/style.css
+++ b/photoX/style.css
@@ -8,7 +8,8 @@ body {
 
 header {
   height: 100vh;
-  background: linear-gradient(rgba(0, 0, 0, .4), rgba(0, 0, 0, .5)), url(images/header-img.jpeg) no-repeat center center / cover;
+  background: linear-gradient(rgba(0, 0, 0, .4), rgba(0, 0, 0, .5)),
+              url(images/header-img.jpeg) no-repeat center center / cover;
 }
 
   /* navbar */
@@ -192,7 +193,7 @@ header {
 /* pricing */
 .card-1, .card-2, .card-3 {
   background: linear-gradient(rgba(0, 0, 0, .6), rgba(0, 0, 0, .5)),
-  url(images/pricing-card-bg.jpeg) center no-repeat / cover;
+              url(images/pricing-card-bg.jpeg) center no-repeat / cover;
   box-shadow: 7px 18px 50px #555;
   max-width: 400px;
 }
@@ -265,11 +266,8 @@ header {
 
 /* contact */
 .contact {
-  background: linear-gradient(105deg,
-  rgba(21, 31, 32, 1) 0%,
-  rgba(21, 31, 32, .95) 50%,
-  transparent 50%),
-  url(images/form-img.jpeg) center center no-repeat / cover;
+  background: linear-gradient(105deg, rgba(21, 31, 32, 1) 0%, rgba(21, 31, 32, .95) 50%, transparent 50%),
+              url(images/form-img.jpeg) center center no-repeat / cover;
 }
 
 .input {
